--- a/client/src/app/long-call/long-call.component.html
+++ b/client/src/app/long-call/long-call.component.html
@@ -7,6 +7,7 @@
   <label for="timeout">Enter timeout (between 1 and 10) in seconds: </label>
   <input #input="ngModel" pattern="^([1-9]?|10)$" required=true [(ngModel)]="timeout">
   <h2>Results from Server</h2>
+  <p *ngIf="urlPath?.length > 0">URL Path: {{urlPath}}</p>
   <p *ngIf="taskStatus?.length > 0">Task Status: {{(taskStatus | uppercase) + progress}}</p>
   <p *ngIf="httpStatusCode > 0">HTTP Status: {{httpStatusCode}}</p>
   <div *ngIf="body?.length > 0">
