WIP: Add front-end support for authentication.

--- a/client/src/app/long-call/long-call.component.html
+++ b/client/src/app/long-call/long-call.component.html
@@ -1,10 +1,15 @@
-<h2>Long-Running Call With Polling (set timeout to 10 seconds to allow task to complete)</h2>
+<a routerLink="/" class="btn btn-dark">Demo Home</a>
+<div class="form-group"></div>
+<h2>Long-Running Call With Polling</h2>
 <div>
-  <button [disabled]="!input.valid || taskStatus === 'submitted' || taskStatus === 'pending'" (click)="onSubmit()">Submit</button>
+  <button class="btn btn-primary" [disabled]="!input.valid || taskStatus === 'submitted' || taskStatus === 'pending'"
+    (click)="onSubmit()">Submit</button>
   <p></p>
-  <button [disabled]="taskStatus === 'submitted' || taskStatus === 'pending'" (click)="onPollBadId()">Poll (Invalid ID)</button>
+  <button class="btn btn-primary" [disabled]="taskStatus === 'submitted' || taskStatus === 'pending'"
+    (click)="onPollBadId()">Poll (Invalid ID)</button>
   <p></p>
-  <label for="timeout">Enter timeout (between 1 and 10) in seconds: </label>
+  <label for="timeout">Enter timeout (between 1 and 10) in seconds:</label>
+  <div class="divider"></div>
   <input #input="ngModel" pattern="^([1-9]?|10)$" required=true [(ngModel)]="timeout">
   <h2>Results from Server</h2>
   <p *ngIf="urlPath?.length > 0"><b>URL Path:       </b><i>{{urlPath}}</i></p>
