--- a/client/src/app/authenticated/authenticated.component.html
+++ b/client/src/app/authenticated/authenticated.component.html
@@ -1,9 +1,10 @@
 ﻿<h1>Hi {{currentUser.firstName}}!</h1>
-<p>You're logged in with Angular 8!!</p>
+<p>You've been authenticated</p>
 <h3>All registered users:</h3>
 <ul>
     <li *ngFor="let user of users">
         {{user.username}} ({{user.firstName}} {{user.lastName}})
-        - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+        <a *ngIf="user.id != currentUser.id" (click)="delete(user)" class="text-danger">Delete</a>
     </li>
 </ul>
+<a routerLink="/login" class="btn btn-primary">Logout</a>
