--- a/client/src/app/authenticated/authenticated.component.html
+++ b/client/src/app/authenticated/authenticated.component.html
@@ -7,4 +7,8 @@
         <a *ngIf="user.id != currentUser.id" (click)="delete(user)" class="text-danger">Delete</a>
     </li>
 </ul>
-<a routerLink="/login" class="btn btn-primary">Logout</a>
+<div class="form-group">
+  <button class="btn btn-primary" (click)="logout()">Logout</button>
+</div>
+
+
