--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -28,12 +28,13 @@
     <input type="password" on-focusout="onPasswordLostFocus()" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
       <div *ngIf="f.password.errors.required">Password is required</div>
-      <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+      <div *ngIf="f.password.errors.minlength">Password must be at least 8 characters</div>
+      <div *ngIf="f.password.errors.maxlength">Password cannot be longer than 64 characters</div>
     </div>
   </div>
   <div class="form-group">
     <label>Confirm Password</label>
-    <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }"/>
+    <input type="password" onPaste="return false" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }"/>
     <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
       <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
       <div *ngIf="f.confirmPassword.errors.match">Passwords don't match</div>
